--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -20,8 +20,8 @@
     "@types/mapbox-gl": "^2.7.19",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react": "^5.1.1",
     "typescript": "^5.6.3",
     "vite": "^5.4.8"
   }
 }
-
